Refactor project structure